--- a/styles/globals.css
+++ b/styles/globals.css
@@ -65,6 +65,27 @@
     height: calc(100vh - 66px);
 }
 
+.typing-demo {
+    width: 320px;
+    animation: typing 2s steps(22), blink .5s step-end  alternate;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 3px solid;
+    font-size: 12px;
+  }
+  
+  @keyframes typing {
+    from {
+      width: 0
+    }
+  }
+      
+  @keyframes blink {
+    50% {
+      border-color: transparent
+    }
+  }
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 .no-scrollbar::-webkit-scrollbar {
     display: none;
