--- a/styles/globals.css
+++ b/styles/globals.css
@@ -116,7 +116,8 @@
     position: absolute;
     left: 50%;
     margin-left: -30px;
-    bottom: 5px;
+    bottom: 0px;
+    top: 750px;
   }
   
   .arrows path {
